--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: The Chocolate Seed Box
+title: Chocolate Seed Box
 author: Pablo Gómez Barreiro & David Coleshill
 email: pablogomezbr@hotmail.es
 description: >-
