--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Chocolate Seed Box
-author: Pablo Gómez Barreiro & David Coleshill
+author: Pablo Gómez Barreiro & David Coleshill - Chocolate Seed Box. CC-BY-NC-ND 4.0
 email: pablogomezbr@hotmail.es
 description: >-
   Tin chocolate boxes, more often than not, contain anything but chocolates.
