--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Chocolate Tin Botanica
 author: Pablo Gómez Barreiro & David Coleshill - Chocolate Tin Botanica - CC-BY-NC-ND 4.0
 email: pablogomezbr@hotmail.es
-description: >-
+description: |
   Hidden treasures often lie in the most peculiar of places.
   Imagine stumbling upon an old chocolate tin box, its contents a mystery waiting to be unraveled.
   However, upon prying open the lid, no delectable sweets await, but rather an array of small glass vials, each safeguarding a world within: seeds.
