--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,15 @@
 title: Chocolate Tin Botanica
 author: Pablo Gómez Barreiro & David Coleshill - Chocolate Tin Botanica - CC-BY-NC-ND 4.0
 email: pablogomezbr@hotmail.es
-description: "Hidden treasures often lie in the most peculiar of places.\
-  Imagine stumbling upon an old chocolate tin box, its contents a mystery waiting to be unraveled.\
-  However, upon prying open the lid, no delectable sweets await, but rather an array of small glass vials, each safeguarding a world within: seeds.\
+description: |
+  Hidden treasures often lie in the most peculiar of places.
+  Imagine stumbling upon an old chocolate tin box, its contents a mystery waiting to be unraveled.
+  However, upon prying open the lid, no delectable sweets await, but rather an array of small glass vials, each safeguarding a world within: seeds.
   
-  The vials, snugly nestled within their tin abode, bear witness to the passage of time.\
-  Within this newfound treasure trove, a kaleidoscope of shapes, textures, and colors emerges. \
-  As these seeds are now captured through the lens of a camera, a digital tapestry begins to unfold into a virtual gallery where these botanical curiosities find their place in the spotlight.\ 
-  Welcome to Chocolate Tin Botanica"
+  The vials, snugly nestled within their tin abode, bear witness to the passage of time.
+  Within this newfound treasure trove, a kaleidoscope of shapes, textures, and colors emerges. 
+  As these seeds are now captured through the lens of a camera, a digital tapestry begins to unfold into a virtual gallery where these botanical curiosities find their place in the spotlight. 
+  Welcome to "Chocolate Tin Botanica"
   
 weare:  >- 
   Photography & Edition: David Coleshill and Pablo Gómez Barreiro
